# constellation-ledger-native-app

./: .gitignore  Makefile  README.md
.github/workflows/: ci-workflow.yml
builds/: app_s.elf  app_sp.elf  app_x.elf
docs/: apdu.md  github-notes.md  guide.md
src/: base-encoding.c  base-encoding.h  constellation.c  constellation.h  format.c  format.h  hex.c  hex.h  main.c  selector.c  selector.h  shared.c  shared.h  ui.c  ui.h  ux_app.c  ux_app.h
test/unit/: CMakeLists.txt  selector_test.c
tests/functional/: build_test_elfs.sh  package-lock.json  package.json
tests/functional/tests/: common.ts  nano_s.test.ts  nano_sp.test.ts  nano_x.test.ts
tests/unit/: selector_test.c
